<resources>
  <string name="app_name">TargetCaseStudy</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>

  <!-- Credit card validation strings. You do not need to make changes here. -->
  <string name="credit_card_payment_title">Credit Card Payment</string>
  <string name="credit_card_payment_subtitle">Note: you do NOT need to enter real data</string>
  <string name="submit">Submit</string>
  <string name="cancel">Cancel</string>
  <string name="credit_card_number_hint">Credit card number</string>
    <string name="target_deals">Target Deals</string>
    <string name="deal_detail">Deal Detail</string>
</resources>
